# cmake_reference

./: README.md
code/day-1/00_hello-cxx/: CMakeLists.txt
code/day-1/01_libraries-cxx/: CMakeLists.txt  buCMakeLists.txt
code/day-1/02_conditionals-cxx/: CMakeLists.txt
code/day-1/03_loops-cxx/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/day-1/03_loops-cxx/solution/: CMakeCache.txt  Makefile  cmake_install.cmake  compute-areas
code/day-1/04_options-cxx/: CMakeLists.txt
code/day-1/05_hello-ctest/: CMakeLists.txt
code/day-1/08_ctest-labels/: CMakeLists.txt
code/day-1/08_ctest-labels/solution/: CMakeLists.txt
code/day-1/17_find_cffi/: CMakeLists.txt
code/day-1/18_pre_post-f/: CMakeLists.txt
code/day-1/18_pre_post-f/solution/: example.f90
code/day-1/19_check_compiler_flag/: CMakeLists.txt
code/day-2/21_automata-cxx/: CMakeLists.txt
code/day-2/21_automata-cxx/solution/src/: CMakeLists.txt
code/day-2/21_automata-cxx/src/: CMakeLists.txt
code/day-2/21_automata-cxx/src/evolution/: CMakeLists.txt
code/day-2/21_automata-cxx/src/initial/: CMakeLists.txt
code/day-2/21_automata-cxx/src/io/: CMakeLists.txt
code/day-2/21_automata-cxx/src/parser/: CMakeLists.txt
code/day-2/23_mpi-cxx/: CMakeLists.txt
code/day-2/26_more-catch2/: CMakeLists.txt
